# frame_up

./: README.md  pyproject.toml  requirements.txt
src/frame_up/: __init__.py  constants.py  file.py  framing.py  models.py  serialization.py  services.py
src/frame_up_gui/: App.py  __init__.py  __main__.py  common.py  events.py  tasks.py
src/frame_up_gui/widgets/: CentralLayout.py  EmailDialog.py  IntensitySlider.py  MainWindow.py  PreviewFrame.py  PreviewLayout.py  __init__.py
